v91: Support for GNOME 48
Signed-off-by: Hollow Man <hollowman@opensuse.org>

--- a/customize-ibus@hollowman.ml/locale/ta/LC_MESSAGES/customize-ibus.po
+++ b/customize-ibus@hollowman.ml/locale/ta/LC_MESSAGES/customize-ibus.po
@@ -4,9 +4,9 @@
 # தமிழ்நேரம் <anishprabu.t@gmail.com>, 2025.
 msgid ""
 msgstr ""
-"Project-Id-Version: Customize Ibus 90\n"
-"Report-Msgid-Bugs-To: hollowman@opensuse.org\n"
-"POT-Creation-Date: 2024-09-11 00:01+0300\n"
+"Project-Id-Version: Customize Ibus 91\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2025-03-04 22:27+0200\n"
 "PO-Revision-Date: 2025-01-03 18:01+0000\n"
 "Last-Translator: தமிழ்நேரம் <anishprabu.t@gmail.com>\n"
 "Language-Team: Tamil <https://hosted.weblate.org/projects/ibus-customize/"
@@ -18,63 +18,63 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Weblate 5.10-dev\n"
 
-#: extension.js:1583
+#: extension.js:1592
 msgid "IBus panel service connected!"
 msgstr "IBUS பேனல் பணி இணைக்கப்பட்டுள்ளது!"
 
-#: extension.js:2198
+#: extension.js:2207
 msgid "loading light user theme for IBus:"
 msgstr "IBUS க்கான ஒளி பயனர் கருப்பொருள் ஏற்றுகிறது:"
 
-#: extension.js:2209
+#: extension.js:2218
 msgid "loading dark user theme for IBus:"
 msgstr "IBUS க்கான இருண்ட பயனர் கருப்பொருள் ஏற்றுகிறது:"
 
-#: extension.js:2215
+#: extension.js:2224
 msgid "loading default theme for IBus"
 msgstr "IBUS க்கான இயல்புநிலை கருப்பொருள் ஏற்றுகிறது"
 
-#: extension.js:2433
+#: extension.js:2442
 msgid "loading background for IBus:"
 msgstr "IBUS க்கான பின்னணியை ஏற்றுகிறது:"
 
-#: extension.js:2446
+#: extension.js:2455
 msgid "remove custom background for IBus"
 msgstr "IBUS க்கான தனிப்பயன் பின்னணியை அகற்று"
 
-#: extension.js:3039
+#: extension.js:3048
 msgid "Starting / Restarting IBus..."
 msgstr "IBUS ஐத் தொடங்க / மறுதொடக்கம் செய்தல் ..."
 
-#: extension.js:3068
+#: extension.js:3077
 msgid "Copy Emoji"
 msgstr "ஈமோசியை நகலெடுக்கவும்"
 
-#: extension.js:3089 prefs.js:1703 prefs.js:2158
+#: extension.js:3098 prefs.js:1703 prefs.js:2158
 msgid "Customize IBus"
 msgstr "தனிப்பயனாக்கு"
 
-#: extension.js:3110 prefs.js:302 prefs.js:545
+#: extension.js:3119 prefs.js:302 prefs.js:545
 msgid "IBus Preferences"
 msgstr "IBES விருப்பத்தேர்வுகள்"
 
-#: extension.js:3131 extension.js:3144 prefs.js:549
+#: extension.js:3140 extension.js:3153 prefs.js:549
 msgid "IBus Version"
 msgstr "Ible பதிப்பு"
 
-#: extension.js:3170
+#: extension.js:3179
 msgid "Restart"
 msgstr "மறுதொடக்கம்"
 
-#: extension.js:3199
+#: extension.js:3208
 msgid "Restarting IBus..."
 msgstr "ஐபி மறுதொடக்கம் ..."
 
-#: extension.js:3218
+#: extension.js:3227
 msgid "Quit"
 msgstr "வெளியேறு"
 
-#: extension.js:3232
+#: extension.js:3241
 msgid "Exiting IBus..."
 msgstr "ஐபி வெளியேறுதல் ..."
 
@@ -453,33 +453,33 @@ msgstr ""
 
 #: prefs.js:1744
 msgid ""
-"<span size=\"small\">Copyright © 2021-2023 <a href=\"https://github.com/"
-"HollowMan6\">Hollow Man</a> &lt;<a href=\"mailto:hollowman@opensuse."
-"org\">hollowman@opensuse.org</a>&gt;</span>"
+"<span size=\"small\">Copyleft 🄯 2021-2025 <a href=\"https://github.com/"
+"HollowMan6\">ℍ𝕠𝕝𝕝𝕠𝕨 𝕄𝕒𝕟</a> &lt;<a "
+"href=\"mailto:hollowman@opensuse.org\">hollowman@opensuse.org</a>&gt;</span>"
 msgstr ""
-"<span அளவு = \"சிறியது\"> பதிப்புரிமை © 2021-2023 <a href = "
-"\"https://github.com/hollowman6\"> வெற்று மனிதன் </a> & lt; > hollowman@"
-"opensuse.org </a> & gt; </span>"
+"<span அளவு = \"சிறியது\"> பதிப்புரிமை 🄯 2021-2025 <a href = \"https://"
+"github.com/hollowman6\"> வெற்று மனிதன் </a> & lt; > hollowman@opensuse.org </"
+"a> & gt; </span>"
 
 #: prefs.js:1756
 msgid ""
 "<span size=\"small\">Source Code: <a href=\"https://github.com/openSUSE/"
 "Customize-IBus\">https://github.com/openSUSE/Customize-IBus</a></span>"
 msgstr ""
-"<span அளவு = \"சிறியது\"> மூல குறியீடு: <a href = "
-"\"https://github.com/opensuse/customize-ibus\"> https://github.com/opensuse/"
-"customize-ibus </a> </ இடைவெளி>"
+"<span அளவு = \"சிறியது\"> மூல குறியீடு: <a href = \"https://github.com/"
+"opensuse/customize-ibus\"> https://github.com/opensuse/customize-ibus </a> "
+"</ இடைவெளி>"
 
 #: prefs.js:1768
 msgid ""
-"<span size=\"small\">Sponsored by <a href=\"https://summerofcode.withgoogle."
-"com/archive/2021/projects/6295506795364352/\">Google Summer of Code 2021</a> "
-"<b><a href=\"https://github.com/openSUSE\">@openSUSE</a></b>.</span>"
+"<span size=\"small\">Sponsored by <a href=\"https://"
+"summerofcode.withgoogle.com/archive/2021/projects/6295506795364352/\">Google "
+"Summer of Code 2021</a> <b><a href=\"https://github.com/"
+"openSUSE\">@openSUSE</a></b>.</span>"
 msgstr ""
-"<span அளவு = \"சிறியது\"> <a href = "
-"\"https://summerofcode.com/archive/2021/projects/62955506795364352/\"> கூகிள் "
-"கோடைகாலத்தின் குறியீடு 2021 </a> <b> <b> <b> = \"https://github.com/opensuse\"> "
-"@opensuse </a> </b>"
+"<span அளவு = \"சிறியது\"> <a href = \"https://summerofcode.com/archive/2021/"
+"projects/62955506795364352/\"> கூகிள் கோடைகாலத்தின் குறியீடு 2021 </a> <b> <b> "
+"<b> = \"https://github.com/opensuse\"> @opensuse </a> </b>"
 
 #: prefs.js:1788
 msgid "Current Session"
@@ -509,11 +509,12 @@ msgid ""
 "also show or hide candidate box page buttons."
 msgstr ""
 "இங்கே நீங்கள் IBUS உள்ளீட்டு சாளர நோக்குநிலை, அனிமேசன், மெனுவைத் திறக்க வலது சொடுக்கு "
-"செய்யலாம் அல்லது மூலத்தை மாற்றவும், பக்கங்கள் அல்லது வேட்பாளர்களிடையே மாறுவதற்கு உருட்டலாம்"
-", சாளரங்கள் மாற்றப்படும்போது கேரட் நிலை, எழுத்துரு, ASCII பயன்முறை ஆட்டோ-சுவிட்சைப் "
-"பின்பற்ற வேண்டாம் என்று வேட்பாளர் பெட்டியை சரிசெய்யலாம் பயனர்கள், வேட்பாளர் பெட்டி ஒளிபுகா "
-"தன்மை, மாற்றும்போது IME பட்டியல் வரிசையை சரிசெய்யவும், உள்ளீடு போது இழுப்பதன் மூலம் "
-"வேட்பாளர் பெட்டியை மாற்றவும், வேட்பாளர் பெட்டி பக்க பொத்தான்களைக் காட்டவும் அல்லது மறைக்கவும்."
+"செய்யலாம் அல்லது மூலத்தை மாற்றவும், பக்கங்கள் அல்லது வேட்பாளர்களிடையே மாறுவதற்கு "
+"உருட்டலாம், சாளரங்கள் மாற்றப்படும்போது கேரட் நிலை, எழுத்துரு, ASCII பயன்முறை ஆட்டோ-"
+"சுவிட்சைப் பின்பற்ற வேண்டாம் என்று வேட்பாளர் பெட்டியை சரிசெய்யலாம் பயனர்கள், வேட்பாளர் பெட்டி "
+"ஒளிபுகா தன்மை, மாற்றும்போது IME பட்டியல் வரிசையை சரிசெய்யவும், உள்ளீடு போது இழுப்பதன் "
+"மூலம் வேட்பாளர் பெட்டியை மாற்றவும், வேட்பாளர் பெட்டி பக்க பொத்தான்களைக் காட்டவும் அல்லது "
+"மறைக்கவும்."
 
 #: prefs.js:1848
 msgid ""
@@ -564,9 +565,9 @@ msgid ""
 "can also start or restart IBus by pressing the top button."
 msgstr ""
 "இங்கே நீங்கள் IBUS தட்டு ஐகானைக் காண்பிக்க அமைக்கலாம், சொடுக்கு மூலம் நேரடியாக மூலத்தை "
-"மாற்றவும், கணினி அல்லாத டெச்க்டாப் சூழலில் உணர்வுகளை மீட்டெடுக்க கணினி தட்டில் IBUS உள்ளீட்டு"
-" மூல காட்டி பட்டியலில் கூடுதல் பட்டியல் உள்ளீடுகளைச் சேர்க்கவும். மேல் பொத்தானை அழுத்துவதன் "
-"மூலம் நீங்கள் IBUS ஐ தொடங்கலாம் அல்லது மறுதொடக்கம் செய்யலாம்."
+"மாற்றவும், கணினி அல்லாத டெச்க்டாப் சூழலில் உணர்வுகளை மீட்டெடுக்க கணினி தட்டில் IBUS "
+"உள்ளீட்டு மூல காட்டி பட்டியலில் கூடுதல் பட்டியல் உள்ளீடுகளைச் சேர்க்கவும். மேல் பொத்தானை "
+"அழுத்துவதன் மூலம் நீங்கள் IBUS ஐ தொடங்கலாம் அல்லது மறுதொடக்கம் செய்யலாம்."
 
 #: prefs.js:1890
 msgid ""
@@ -598,8 +599,8 @@ msgstr ""
 "IME க்கு), ஒற்றை பயன்முறையைப் பயன்படுத்தும் போது அறிவிக்கப்படவில்லை, காட்டி மூடுவதற்கு "
 "வலது சொடுக்கு செய்யவும், உள்ளீட்டு மூலத்தை மாற்றவும், பாப்அப் அனிமேசன், எழுத்துரு, மவுச் "
 "இடது சொடுக்கு செய்யவும் காட்டி, காட்டி ஒளிபுகாநிலையை நகர்த்துவதற்கு மூல அல்லது "
-"இழுக்கவும், தாமதத்தைக் காண்பிக்கவும், காலக்கெடுவைக் காண்பிக்கவும் (விநாடிகளில்), "
-"ஆட்டோ-மறைவை இயக்கவும் மற்றும் தானாக மறைத்தல் காலக்கெடு (விநாடிகளில்)."
+"இழுக்கவும், தாமதத்தைக் காண்பிக்கவும், காலக்கெடுவைக் காண்பிக்கவும் (விநாடிகளில்), ஆட்டோ-"
+"மறைவை இயக்கவும் மற்றும் தானாக மறைத்தல் காலக்கெடு (விநாடிகளில்)."
 
 #: prefs.js:1913
 msgid ""
@@ -617,8 +618,8 @@ msgid ""
 "href=\"https://github.com/openSUSE/IBus-Theme-Hub\">IBus Theme Hub</a>."
 msgstr ""
 "<A href = \"https://github.com/opensuse/ibus-theme-tools\"> IBUS கருப்பொருள் "
-"கருவிகள் </a> அல்லது <a href = \"https://github.com/ OpenSuse/ibus-theme-hub \""
-"> IBUS கருப்பொருள் அப் </a>."
+"கருவிகள் </a> அல்லது <a href = \"https://github.com/ OpenSuse/ibus-theme-hub "
+"\"> IBUS கருப்பொருள் அப் </a>."
 
 #: prefs.js:1936
 msgid ""
@@ -630,8 +631,8 @@ msgstr ""
 "ஒளி கருப்பொருள் மற்றும் இருண்ட கருப்பொருள் ஒரே நேரத்தில் இயக்கப்படும் போது, IBUS "
 "கருப்பொருள் தானாகவே க்னோம் நைட் லைட் பயன்முறையைப் பின்பற்றும், ஒளி கருப்பொருளைப் "
 "பயன்படுத்தும், மற்றும் இருக்கும்போது இருண்ட கருப்பொருளைப் பயன்படுத்தும். ஒளி கருப்பொருள் "
-"அல்லது இருண்ட கருப்பொருள் மட்டுமே இயக்கப்படும் போது, IBUS கருப்பொருள் எப்போதும் இயக்கப்படும்"
-" கருப்பொருளைப் பயன்படுத்தும்."
+"அல்லது இருண்ட கருப்பொருள் மட்டுமே இயக்கப்படும் போது, IBUS கருப்பொருள் எப்போதும் "
+"இயக்கப்படும் கருப்பொருளைப் பயன்படுத்தும்."
 
 #: prefs.js:1945
 msgid ""
@@ -640,16 +641,16 @@ msgid ""
 "stylesheet to prevent from corrupting system themes.</b></span>"
 msgstr ""
 "<span அளவு = \"சிறியது\"> <b> <i> எச்சரிக்கை: </i> பிழைத்திருத்தத்திற்காக "
-"இல்லாவிட்டால், தயவுசெய்து <i> உடன் தொடங்கப்படாத எந்த வகுப்புகளையும் சேர்க்க வேண்டாம் "
-".சான்டிடேட்-*</i> கணினி கருப்பொருள்களை சிதைப்பதைத் தடுக்கவும். </b> </span>"
+"இல்லாவிட்டால், தயவுசெய்து <i> உடன் தொடங்கப்படாத எந்த வகுப்புகளையும் சேர்க்க "
+"வேண்டாம் .சான்டிடேட்-*</i> கணினி கருப்பொருள்களை சிதைப்பதைத் தடுக்கவும். </b> </span>"
 
 #: prefs.js:1954
 msgid ""
 "<span size=\"small\"><b>Note:</b> Support stylesheets hot reload, CSS "
 "changes reflecting in real-time.</span>"
 msgstr ""
-"<span அளவு = \"சிறியது\"> <b> குறிப்பு: </b> ச்டைல்சீட்களை ஆதரிக்கவும் சூடான மறுஏற்றம்"
-", நிகழ்நேரத்தில் பிரதிபலிக்கும் சிஎச்எச் மாற்றங்கள். </span>"
+"<span அளவு = \"சிறியது\"> <b> குறிப்பு: </b> ச்டைல்சீட்களை ஆதரிக்கவும் சூடான "
+"மறுஏற்றம், நிகழ்நேரத்தில் பிரதிபலிக்கும் சிஎச்எச் மாற்றங்கள். </span>"
 
 #: prefs.js:1968
 msgid ""
@@ -667,8 +668,8 @@ msgid ""
 "light background or dark background is turned on, the IBus background will "
 "always use the background that is turned on."
 msgstr ""
-"ஒளி பின்னணி மற்றும் இருண்ட பின்னணி ஒரே நேரத்தில் இயக்கப்படும் போது, IBUS பின்னணி தானாகவே"
-" க்னோம் நைட் லைட் பயன்முறையைப் பின்பற்றும், ஒளி பின்னணியைப் பயன்படுத்தும், மற்றும் "
+"ஒளி பின்னணி மற்றும் இருண்ட பின்னணி ஒரே நேரத்தில் இயக்கப்படும் போது, IBUS பின்னணி "
+"தானாகவே க்னோம் நைட் லைட் பயன்முறையைப் பின்பற்றும், ஒளி பின்னணியைப் பயன்படுத்தும், மற்றும் "
 "இருக்கும்போது இருண்ட பின்னணியைப் பயன்படுத்தும். ஒளி பின்னணி அல்லது இருண்ட பின்னணி மட்டுமே "
 "இயக்கப்பட்டால், IBUS பின்னணி எப்போதும் இயக்கப்படும் பின்னணியைப் பயன்படுத்தும்."
 
@@ -680,11 +681,11 @@ msgid ""
 "the corresponding <b>Use custom background</b> again to make it effective "
 "after manually mounting.</span>"
 msgstr ""
-"<span அளவு = \"சிறியது\"> <b> குறிப்பு: </b> உங்கள் பின்னணி படத்தை எப்போதும் பார்வையி"
-"ட முடியும் என்பதை உறுதிப்படுத்தவும். உங்கள் படங்கள் நீக்கக்கூடிய சாதனத்தில் சேமிக்கப்பட்டு, "
-"கணினி இயல்புநிலையாக அதை ஏற்றவில்லை என்றால், தயவுசெய்து முடக்கு, பின்னர் தொடர்புடைய <b> "
-"தனிப்பயன் பின்னணியைப் பயன்படுத்தவும் </b> ஐ கைமுறையாக ஏற்றிய பின் அதை பயனுள்ளதாக "
-"மாற்றவும். </Span>"
+"<span அளவு = \"சிறியது\"> <b> குறிப்பு: </b> உங்கள் பின்னணி படத்தை எப்போதும் "
+"பார்வையிட முடியும் என்பதை உறுதிப்படுத்தவும். உங்கள் படங்கள் நீக்கக்கூடிய சாதனத்தில் "
+"சேமிக்கப்பட்டு, கணினி இயல்புநிலையாக அதை ஏற்றவில்லை என்றால், தயவுசெய்து முடக்கு, பின்னர் "
+"தொடர்புடைய <b> தனிப்பயன் பின்னணியைப் பயன்படுத்தவும் </b> ஐ கைமுறையாக ஏற்றிய பின் அதை "
+"பயனுள்ளதாக மாற்றவும். </Span>"
 
 #: prefs.js:2000
 msgid ""
